--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="...">
+				<img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.webp 650w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w"
+				sizes="(max-width: 650px) 650px, 1920px"
+				src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="..."/>
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="...">
+				<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.webp 650w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp 1920w"
+				sizes="(max-width: 650px) 650px, 1920px"
+				src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="...">
+				<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.webp 650w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1920w"
+				sizes="(max-width: 650px) 650px, 1920px" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="...">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
