--- a/index.html
+++ b/index.html
@@ -34,18 +34,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.webp 650w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w"
-				sizes="(max-width: 650px) 650px, 1920px"
-				src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="homme traversant la route sur un passage piéton"/>
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" width="1920" height="888" class="d-block w-100" alt="homme traversant la route sur un passage piéton"/>
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.webp 650w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp 1920w"
-				sizes="(max-width: 650px) 650px, 1920px"
-				src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="deux hommes au milieu d'une foule célébrant un évènement">
+				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" width="1920" height="888" class="d-block w-100" alt="deux hommes au milieu d'une foule célébrant un évènement">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.webp 650w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1920w"
-				sizes="(max-width: 650px) 650px, 1920px" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Un couple de mariés s'embrassant sur la piste de danse">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" width="1920" height="888" class="d-block w-100" alt="Un couple de mariés s'embrassant sur la piste de danse">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
