balises meta réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<title>Nina Carducci - Photographe pour tous vos projets</title>
-</head>
+
+	<meta property="og:title" content="Nina Carducci - Photographe"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="https://nina-carducci.github.io"/>
+	<meta property="og:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
+	<meta property="og:description" content="Photographe professionnelle disponible pour tous vos projets"/>
+
+	<meta name="twitter:card" content="summary"/>
+	<meta name="twitter:title" content="Nina Carducci - Photographe"/>
+	<meta name="twitter:description" content="hotographe professionnelle disponible pour tous vos projets"/>
+	<meta name="twitter:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
 <body>
 <div class="top-header">
 	<h1 class="name">Nina Carducci</h1>
