--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	<meta property="og:title" content="Nina Carducci - Photographe"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://nina-carducci.github.io"/>
-	<meta property="og:image" content="https://nina-carducci.github.io/assets/images/RS_portrait.png"/>
+	<meta property="og:image" content="https://nina-carducci.github.io/assets/images/RS_portrait.webp"/>
 	<meta property="og:description" content="Photographe professionnelle disponible pour tous vos projets"/>
 
 	<meta name="twitter:card" content="summary"/>
 	<meta name="twitter:title" content="Nina Carducci - Photographe"/>
 	<meta name="twitter:description" content="hotographe professionnelle disponible pour tous vos projets"/>
-	<meta name="twitter:image" content="https://nina-carducci.github.io/assets/images/RS_portrait.png"/>
+	<meta name="twitter:image" content="https://nina-carducci.github.io/assets/images/RS_portrait.webp"/>
 <body>
 <div class="top-header">
 	<h1 class="name">Nina Carducci</h1>
