--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
 {
   "@context": "https://schema.org",
   "@type": "localBusiness",
-  "image": [
-    "./assets/images/camera.webp",
-   ],
+  "image": "./assets/images/nina.webp",
   "name": "Nina Carducci",
   "address": {
     "@type": "PostalAddress",
