--- a/index.html
+++ b/index.html
@@ -171,21 +171,19 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "localBusiness",
-  "image": "./assets/images/nina.webp",
+  "@type": "LocalBusiness",
+  "image": "https://raw.githubusercontent.com/Kumkw4t/Nina-Carducci/master/assets/images/nina.webp",
   "name": "Nina Carducci",
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "68 avenue Alsace-Lorraine",
     "addressLocality": "Bordeaux",
-    "addressRegion": "Bordeaux",
     "postalCode": "33200",
     "addressCountry": "FR"
   },
   "url": "https://kumkw4t.github.io/Nina-Carducci/",
   "telephone": "0556677889",
-  "openingHoursSpecification": [
-    {
+  "openingHoursSpecification": {
       "@type": "OpeningHoursSpecification",
       "dayOfWeek": [
         "Monday",
@@ -196,8 +194,8 @@
       ],
       "opens": "10:00",
       "closes": "19:00"
-    }
-  ]
+    },
+   "price Range" : "€€"
 }
 </script>
 </html>
