--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 	<meta charset="UTF-8">
 	<title>Nina Carducci - Photographe pour tous vos projets</title>
 
-	<meta property="og:title" content="Nina Carducci - Photographe"/>
-	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="https://nina-carducci.github.io"/>
-	<meta property="og:image" content="https://raw.githubusercontent.com/Kumkw4t/Nina-Carducci/master/assets/images/RS_portrait.png"/>
-	<meta property="og:description" content="Photographe professionnelle disponible pour tous vos projets"/>
+	<meta property="og:title" content="Nina Carducci - Photographe">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://nina-carducci.github.io">
+	<meta property="og:image" content="https://raw.githubusercontent.com/Kumkw4t/Nina-Carducci/master/assets/images/RS_portrait.png">
+	<meta property="og:description" content="Photographe professionnelle disponible pour tous vos projets">
 
-	<meta name="twitter:card" content="summary"/>
-	<meta name="twitter:title" content="Nina Carducci - Photographe"/>
-	<meta name="twitter:description" content="hotographe professionnelle disponible pour tous vos projets"/>
-	<meta name="twitter:image" content="https://raw.githubusercontent.com/Kumkw4t/Nina-Carducci/master/assets/images/RS_portrait.png"/>
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Nina Carducci - Photographe">
+	<meta name="twitter:description" content="hotographe professionnelle disponible pour tous vos projets">
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/Kumkw4t/Nina-Carducci/master/assets/images/RS_portrait.png">
 <body>
 <div class="top-header">
 	<h1 class="name">Nina Carducci</h1>
@@ -44,7 +44,7 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" width="1920" height="888" class="d-block w-100" alt="homme traversant la route sur un passage piéton"/>
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" width="1920" height="888" class="d-block w-100" alt="homme traversant la route sur un passage piéton">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" width="1920" height="888" class="d-block w-100" alt="deux hommes au milieu d'une foule célébrant un évènement">
@@ -79,15 +79,15 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="photo d'une salle de concert prise depuis la foule"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait d'un homme en costume"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="photographie d'une femme dans un open space"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="photographie des mains de deux personnes portant une bague de fiancailles"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="portrait d'un homme fronçant les yeux"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="photographie d'un couple en tenue de mariés tenant un bouquet devant un palmier"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme à lunettes à travers un grillage"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="photographie d'un chanteur sur scène"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="portrait d'une jeune femme souriant assise à son bureau devant son ordinateur"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="photo d'une salle de concert prise depuis la foule">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait d'un homme en costume">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="photographie d'une femme dans un open space">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="photographie des mains de deux personnes portant une bague de fiancailles">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="portrait d'un homme fronçant les yeux">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="photographie d'un couple en tenue de mariés tenant un bouquet devant un palmier">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme à lunettes à travers un grillage">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="photographie d'un chanteur sur scène">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="portrait d'une jeune femme souriant assise à son bureau devant son ordinateur">
 		</div>
 	</div>
 	<div class="quote">
@@ -148,14 +148,14 @@
 		<div class="form-container">
 			<h3>Une question ? Une demande de devis ?</h3>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
+			<form action="submit" method="post">
 				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom">
 				<label for="email">Email</label>
 				<input type="email" name="email" id="email">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
+				<input type="submit" value="Envoyer">
 			</form>
 		</div>
 		<div class="picture right">
@@ -163,7 +163,6 @@
 		</div>
 	</div>
 </div>
-</body>
 <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha384-Ft/vb48LwsAEtgltj7o+6vtS2esTU9PCpDqcXs4OCVQFZu5BqprHtUCZ4kjK+bpE" crossorigin="anonymous"></script>
 <script src="./assets/maugallery.js"></script>
@@ -198,4 +197,5 @@
    "priceRange" : "€€"
 }
 </script>
+</body>
 </html>
